--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     return 0.5 * width;
   }
   var getWizardY = function(height) {
-    return 0.667 * height;
+    return 1/3 * height;
   }
 
   var fireballSize = 22;
