--- a/index.html
+++ b/index.html
@@ -187,15 +187,15 @@
   var getWizardHeight = function () {
     return 1.337 * wizardWidth;
   }
-  var getWizardX = function(width) {
-    return 0.5 * width;
+  var getWizardX = function (width) {
+    return 0.5 * (width - wizardWidth);
   }
-  var getWizardY = function(height) {
+  var getWizardY = function (height) {
     return 1/3 * height;
   }
 
   var fireballSize = 22;
-  var getFireballSpeed = function(left) {
+  var getFireballSpeed = function (left) {
     return left ? 5 : 2;
   }
 </script>
